--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -628,6 +628,7 @@ service vendor.contexthub-hal-1-0 /vendor/bin/hw/android.hardware.contexthub@1.0
     disabled
 
 on property:vold.decrypt=trigger_restart_framework
+    restart vendor.audio-hal
     start vendor-sensor-sh
 
 on boot && property:persist.vendor.usb.controller.default=*
